expanded on parametric posterior and fixed bug in multivariate approximation, added another integration test

--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 JuliaDB = "a93385a2-3734-596a-9a66-3cfbb77141e6"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 PrettyPrint = "8162dcfd-2161-5ef2-ae6c-7681170c5f98"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
