working on graph and discretization

--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuliaDB = "a93385a2-3734-596a-9a66-3cfbb77141e6"
+LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -22,7 +23,6 @@ TensorOperations = "6aa20fa7-93e2-5fca-9bc0-fbd0db3c71a2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-julia = "1.5 - 1.7"
 DataStructures = "0.17"
 Distributions = "0.23"
 Documenter = "0.26"
@@ -34,3 +34,4 @@ Plots = "0.28"
 PrettyPrint = "0.2"
 StatsBase = "0.32"
 TensorOperations = "3.2"
+julia = "1.5 - 1.7"
